# xenith-operating-system

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  THIRD_PARTY_NOTICES.md  XENITH_MASTER_PROMPT.md  clippy.toml  limine.conf  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
bootloader/: README.md  build.ps1
bootloader/stage1/: Cargo.toml  stage1.ld
bootloader/stage1/src/: lib.rs  main.rs
bootloader/stage2/: Cargo.toml  build.rs  stage2.ld
bootloader/stage2/src/: entry.S  lib.rs  main.rs
bootloader/uefi/: Cargo.toml
bootloader/uefi/assets/: xenith-splash.rgb565
bootloader/uefi/src/: abi.rs  file.rs  lib.rs  main.rs  paging.rs  splash.rs
crates/xenith-boot/: Cargo.toml
crates/xenith-boot/src/: lib.rs  region.rs
crates/xenith-pe/: Cargo.toml
crates/xenith-pe/src/: error.rs  headers.rs  image.rs  imports.rs  lib.rs  plan.rs  policy.rs  reader.rs  relocation.rs
crates/xenith-pe/tests/: loader_format.rs  parser.rs
crates/xenith-types/: Cargo.toml
crates/xenith-types/src/: address.rs  lib.rs  page.rs  size.rs
docs/: ARCHITECTURE.md  BOOT_FLOW.md  BOOT_PROTOCOL.md  BUILD.md  CONTRIBUTING.md  DESKTOP_FOUNDATION.md  DRIVERS.md  EMULATOR.md  LINUX_EDITION.md  MEMORY_MAP.md  ROADMAP.md  RUNNING.md  STATUS.md  SUBSYSTEMS.md  SYSCALL_ABI.md  TOOLCHAIN.md  WINDOWS_FILESYSTEM.md
emu/xenith-emu/: Cargo.toml
emu/xenith-emu/src/: cpu.rs  debug.rs  device.rs  elf.rs  firmware.rs  firmware_exec.rs  host_input.rs  lib.rs  machine.rs  main.rs  memory.rs  platform.rs  uefi.rs
emu/xenith-emu/tests/: c_toolchain.rs  cli_input.rs  image_boot.rs  smp_boot.rs
kernel/: Cargo.toml  build.rs  linker.ld  x86_64-xenith.json
kernel/src/: boot.rs  console.rs  init.rs  lib.rs  main.rs  panic.rs  power.rs  test.rs  tty.rs  ui.rs
kernel/src/acpi/: dsdt.rs  fadt.rs  madt.rs  mod.rs  rsdp.rs  rsdt.rs  shutdown.rs  xsdt.rs
kernel/src/acpi/aml/: eval.rs  mod.rs  namespace.rs  parser.rs  region.rs  resource.rs  value.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: cpu.rs  fpu.rs  gdt.rs  idt.rs  instructions.rs  mod.rs  msr.rs  percpu.rs  port.rs  registers.rs  smp.rs  tss.rs  usercopy.rs
kernel/src/arch/x86_64/asm/: ap_trampoline.S  context_switch.S  ipi.S  isr.S  mod.rs  syscall.S  usercopy.S
kernel/src/arch/x86_64/interrupts/: apic.rs  exceptions.rs  handlers.rs  ioapic.rs  mod.rs  pic.rs
kernel/src/devices/: cmos.rs  driver.rs  fb_font.rs  framebuffer.rs  gfx.rs  mod.rs  pcspk.rs  registry.rs  rng.rs  serial.rs  serial_ext.rs  term.rs  vga.rs
kernel/src/devices/ahci/: hba.rs  mod.rs
kernel/src/devices/audio/: codec.rs  dma.rs  mod.rs  registers.rs  ring.rs  stream.rs  wait.rs
kernel/src/devices/display/: mod.rs  protocol.rs  svga2.rs
kernel/src/devices/net/: dma.rs  e1000.rs  mod.rs  rtl8139.rs
kernel/src/devices/pci/: capability.rs  config.rs  enumerate.rs  mod.rs  routing.rs
kernel/src/devices/ps2/: keyboard.rs  mod.rs  mouse.rs
kernel/src/devices/usb/: descriptor.rs  hid.rs  mod.rs
kernel/src/devices/usb/xhci/: context.rs  controller.rs  mod.rs  registers.rs  ring.rs  trb.rs  wait.rs
kernel/src/fs/: fd.rs  initramfs.rs  inode.rs  mod.rs  path.rs  pipe.rs  pty.rs  ramfs.rs  syscalls.rs  vfs.rs
kernel/src/fs/fat/: boot_sector.rs  dir.rs  fat.rs  file.rs  mod.rs
kernel/src/fs/xenithfs/: dir.rs  extent.rs  inode.rs  journal.rs  mod.rs  sb.rs
kernel/src/ipc/: channel.rs  mod.rs  shared_memory.rs  syscall.rs  wait.rs
kernel/src/log/: logger.rs  mod.rs
kernel/src/mm/: allocator.rs  heap.rs  kmalloc.rs  mod.rs
kernel/src/mm/physical/: bitmap.rs  buddy.rs  mod.rs
kernel/src/mm/virtual/: address_space.rs  mod.rs  page_table.rs  paging.rs
kernel/src/net/: arp.rs  dhcp.rs  dns.rs  eth.rs  icmp.rs  ip.rs  loopback.rs  mod.rs  routing.rs  socket.rs  tcp.rs  udp.rs
kernel/src/sched/: context.rs  fpu.rs  idle.rs  kthread.rs  mod.rs  preempt.rs  scheduler.rs  task.rs  thread.rs
kernel/src/sync/: mod.rs  mutex.rs  percpu.rs  rwlock.rs  spinlock.rs  spinlock_irq.rs
kernel/src/syscall/: entry.rs  handlers.rs  mod.rs  table.rs
kernel/src/time/: calibration.rs  clock.rs  hpet.rs  lapic_timer.rs  mod.rs  pit.rs  rtc.rs
kernel/src/user/: elf.rs  mod.rs  process.rs  ring3.rs  signal.rs
kernel/src/util/: bitmap.rs  linked_list.rs  mod.rs  ringbuffer.rs
scripts/: debug-qemu.sh  make-iso.sh  run-qemu.sh  sync-linux-reference.ps1
tools/xenith-asm/: Cargo.toml
tools/xenith-asm/src/: lib.rs  main.rs
tools/xenith-build/: Cargo.toml
tools/xenith-build/src/: lib.rs  main.rs
tools/xenith-debug/: Cargo.toml  README.md
tools/xenith-debug/src/: client.rs  command.rs  lib.rs  main.rs  rsp.rs  source.rs  symbols.rs
tools/xenith-debug/tests/: cli.rs  dwarf_artifact.rs  emu_protocol.rs  rsp_bridge.rs
tools/xenith-fsck/: Cargo.toml
tools/xenith-fsck/src/: lib.rs  main.rs
tools/xenith-iso/: Cargo.toml  README.md
tools/xenith-iso/src/: checksum.rs  disk.rs  error.rs  fat.rs  iso9660.rs  lib.rs  main.rs
user/desktop/: Cargo.toml  README.md
user/desktop/assets/: README.md  sedat-wallpaper.rgb
user/desktop/src/: compositor.rs  lib.rs  main.rs  render.rs  wallpaper.rs  window_smoke.rs  window_smoke_render.rs
user/examples/: Cargo.toml
user/examples/src/: hello.rs  thread_smoke.rs
user/explorer/: Cargo.toml  README.md
user/explorer/src/: layout.rs  lib.rs  main.rs  model.rs  render.rs
user/windrv-core/: Cargo.toml  README.md
user/windrv-core/src/: abi.rs  lib.rs  objects.rs  request.rs  resource.rs
user/windrv-core/tests/: abi.rs  objects.rs  requests.rs  resources.rs
user/winhost/: Cargo.toml  README.md
user/winhost-core/: Cargo.toml  README.md
user/winhost-core/src/: handle.rs  imports.rs  layout.rs  lib.rs  namespace.rs  object.rs  path.rs  runtime.rs  service.rs  status.rs  sync.rs  types.rs  vm.rs
user/winhost-core/tests/: nt_runtime.rs  paths.rs  pe_planning.rs  registry_vm.rs  runtime_layout.rs  status_handles.rs  windows_namespace.rs
user/winhost/src/: fixture.rs  lib.rs  main.rs  path_runtime.rs  runtime.rs
user/winhost/tests/: loader.rs  path_runtime.rs  runtime.rs
(+107 files in other folders)
