[package]
name = "xenith-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "xenith_desktop"
path = "src/lib.rs"

[[bin]]
name = "xenith-desktop"
path = "src/main.rs"
test = false
bench = false

[dependencies]
libuser = { path = "../libuser" }
xenith-abi = { path = "../../crates/xenith-abi" }

[lints]
workspace = true
